# yzzAlgorithm

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  testRun.bat
01_KMP/: CMakeLists.txt  main.cpp
02_TEST/: CMakeLists.txt  main.cpp
AlgorithmManager/dev/: .gitignore  build_exe.bat  installer.py  main.py  requirements.txt
AlgorithmManager/dev/img/: .gitkeep
